(rule
 (target btree.ml)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target database.ml)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target dbdisk.mli)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target dutil.ml)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target iovalue.ml)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target outbase.ml)
 (action (run curl -LJO https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/%{target}))
)
(rule
 (target gwdb_driver_legacy.ml)
 (action (run curl -L https://raw.githubusercontent.com/geneweb/geneweb/master/lib/gwdb-legacy/gwdb_driver.ml -o %{target}))
)

(env ( _ (flags (:standard -w +a-4-9-48)) ) )

(library
  (name gwdb_legacy_x_arangodb)
  (libraries
    curl
    geneweb
    geneweb.def
    geneweb.util
    jsonaf
    syslog
    yojson
  )
  (modules_without_implementation dbdisk)
  (modules
    btree
    database
    dbdisk
    dutil
    gwdb_driver
    gwdb_driver_arango
    gwdb_driver_env
    gwdb_driver_legacy
    http_curl
    json
    json_jsonaf
    outbase
  )
)
